infrastructure/longhorn/namespace.yaml
# k3s-gitops/infrastructure/longhorn/namespace.yaml
# ---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: longhorn
